fixed spacing between title and canvas in app

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -123,7 +123,6 @@ a.button {
   min-width: 300px;
   padding: 0px;
   list-style-type: none;
-  margin: 15px auto;
 }
 
 .palette:after {
@@ -144,8 +143,7 @@ a.button {
 
 .canvas {
   border: 1px solid #ccc;
-  margin-left: auto;
-  margin-right: auto;
+  margin: 15px auto;
 }
 
 .canvas:after {
